# genmul

./: CMakeLists.txt  LICENSE  README.md
src/: Array.cpp  Array.hpp  BrentKungAdder.cpp  BrentKungAdder.hpp  CMakeLists.txt  CarryLookAhead.cpp  CarryLookAhead.hpp  CarryPredictor.cpp  CarryPredictor.hpp  CarrySkipAdder.cpp  CarrySkipAdder.hpp  CarrySkipAdderVariable.cpp  CarrySkipAdderVariable.hpp  Dadda.cpp  Dadda.hpp  GenMul.cpp  GenMul.hpp  GenMul_Emscripten.cpp  GenMul_Emscripten.hpp  KoggeStoneAdder.cpp  KoggeStoneAdder.hpp  LanderFischerAdder.cpp  LanderFischerAdder.hpp  ModuleConnector.cpp  ModuleConnector.hpp  PartialProductGenerator.cpp  PartialProductGenerator.hpp  PartialProductGeneratorSigned.cpp  PartialProductGeneratorSigned.hpp  RippleCarryAdder.cpp  RippleCarryAdder.hpp  SerialPrefixAdder.cpp  SerialPrefixAdder.hpp  VerilogGen.cpp  VerilogGen.hpp  Wallace.cpp  Wallace.hpp  Wallace5.cpp  Wallace5.hpp  check_version.sh  (+6 more)
